# yeah-idk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  out.js  tsconfig.json
.github/workflows/: docker-publish.yml
js/: app.tsx  lib.tsx  react-dom.js  react.js  root.tsx  test.tsx
js/routes/: admin.tsx  index.tsx  post.tsx
js/routes/admin/: posts.tsx
js/routes/admin/posts/: create.tsx
src/: main.rs
src/database/: mod.rs  models.rs
src/routers/: admin.rs  mod.rs  util.rs
src/tsx/: mod.rs
